--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
 <head>
     <title><%= full_title(yield(:title)) %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+    <div class="container">
+        <%= yield %>
+        <%= render 'layouts/footer' %>
+    </div>
 </body>
 
 </html>
